Alteracao titulo do edit para mostrar nome cliente

--- a/resources/views/frontend/clientes/edit.edge
+++ b/resources/views/frontend/clientes/edit.edge
@@ -4,7 +4,7 @@
 
 <div id="lista-altera-cliente">
   
-    <h3>Altera Cliente</h3>
+    <h3>Alterar Cliente: {{ cliente.nome }}</h3>
 
     <div id="busca">
     </div>
