Ajustes nas migrations e Clientes

--- a/resources/views/frontend/clientes/create.edge
+++ b/resources/views/frontend/clientes/create.edge
@@ -66,10 +66,10 @@
     </div>
 
     <div class="label-float">
-      <input type="text" placeholder=" " name="CEP" value="{{ old('CEP', '') }}" required/>
+      <input type="text" placeholder=" " name="cep" value="{{ old('cep', '') }}" required/>
       <label>CEP</label>
-      @if(hasErrorFor('CEP')) 
-      <span class= "mens-error"> {{ getErrorFor('CEP') }} </span>
+      @if(hasErrorFor('cep')) 
+      <span class= "mens-error"> {{ getErrorFor('cep') }} </span>
       @endif
     </div>
 
