--- a/resources/views/frontend/clientes/show.edge
+++ b/resources/views/frontend/clientes/show.edge
@@ -50,7 +50,7 @@
 
         <div class="label-edit">
           <label for="">CEP: </label>
-          <input disabled type="text" name="CEP" value="{{ cliente.CEP }}" class="form-control"required/>
+          <input disabled type="text" name="cep" value="{{ cliente.cep }}" class="form-control"required/>
         </div>
 
         <div class="label-edit">
