alterações nas views do serviço

--- a/resources/views/layouts/menu.edge
+++ b/resources/views/layouts/menu.edge
@@ -5,10 +5,10 @@
           <a id="cor" class="nav-link" href="/os">Ordem de Serviço</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Serviços</a>
+          <a id="cor" class="nav-link" href="/servicos">Serviços</a>
         </li>
         <li class="nav-item">
-          <a id="cor" class="nav-link" href="#">Usuários</a>
+          <a id="cor" class="nav-link" href="/usuario">Usuários</a>
         </li>
         <li class="nav-item">
           <a id="cor" class="nav-link" href="/produto">Produtos</a>
