--- a/resources/views/frontend/servicos/show.edge
+++ b/resources/views/frontend/servicos/show.edge
@@ -2,80 +2,37 @@
 
 @section("content")
 
-<div id="lista">
-  <div>
-    <div id="busca">
+@if(flashMessage('notification'))
+<span class="sucesso">{{ flashMessage('notification') }}</span>
+@endif
 
-    </div>
+<div id="lista-mostra-cliente">
+  <h3>Serviço: {{ servico.nome }}</h3>
+  <div>
   
     <table id="tabela">
-      <thead>
-        <tr>
-          <th>Cliente</th>
-          <th>Data de Nascimento</th>
-          <th>Cidade</th>
-          <th>Estado</th>
-          <th>Telefone</th>
-        </tr>
-      </thead>
-      <tbody>       
-        <tr>
-          <td>{{ cliente.nome }}</td>
-          <td>{{ cliente.data_nascimento }}</td>
-          <td>{{ cliente.cidade }}</td>
-          <td>{{ cliente.estado }}</td>
-          <td>{{ cliente.telefone }}</td>
-        </tr>
-      </tbody>
+     
+      <div class="label-edit">
+        <label for="">Nome:</label>
+        <input disabled type="text" autocomplete="off" name="nome" value="{{ servico.nome }}" class="form-control" required/>
+      </div>
+      
+      <div class="label-edit">
+        <label>Descrição</label>
+        <input disabled type="text" value="{{servico.descricao) }}" name="descricao" class="form-control" required/>
+      </div>
+
+      <div class="label-edit">
+        <label for="">Categoria: </label>
+        <input disabled type="text" name="categoria" value="{{ servico.categoria }}" class="form-control" required/>
+      </div>
+
+
+      <div class="label-edit">
+        <label>Valor: </label>
+        <input disabled type="number" name="valor" value="{{ servico.valor }}" class="form-control" required/>
+      </div>
     </table>
 
-    <br>
-
-   <table id="tabela">
-      <thead>
-        <tr>
-          <th>Tipo</th>
-          <th>CPF/CNPJ</th>
-          <th>Email</th>
-          <th>Endereco</th>
-          <th>Numero</th>
-        </tr>
-      </thead>
-      <tbody>       
-        <tr>
-          <td>{{ cliente.tipo }}</td>
-          <td>{{ cliente.cpf_cnpj }}</td>
-          <td>{{ cliente.email }}</td>
-          <td>{{ cliente.endereco }}</td>
-          <td>{{ cliente.numero_endereco }}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <table id="tabela">
-      <thead>
-        <tr>
-          <th>Complemento</th>
-          <th>Bairro</th>
-          <th>CEP</th>
-          <th>Observacoes</th>
-          <th>Data Registro</th>
-        </tr>
-      </thead>
-      <tbody>       
-        <tr>
-          <td>{{ cliente.complemento }}</td>
-          <td>{{ cliente.bairro }}</td>
-          <td>{{ cliente.CEP }}</td>
-          <td>{{ cliente.observacoes }}</td>
-          <td>{{ cliente.created_at }}</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <br>
-
-  </div>
-</div>
-
+    
 @endsection
